updated with more links

--- a/code_examples/raw/links_to_code.html
+++ b/code_examples/raw/links_to_code.html
@@ -136,6 +136,26 @@ $(document).ready(function () {
 <li><a href="https://wikimedia-research.github.io/Discovery-Search-Adhoc-RelevanceSurveys/" class="uri">https://wikimedia-research.github.io/Discovery-Search-Adhoc-RelevanceSurveys/</a></li>
 <li><a href="https://wikimedia-research.github.io/Discovery-Search-Test-InterleavedLTR/" class="uri">https://wikimedia-research.github.io/Discovery-Search-Test-InterleavedLTR/</a></li>
 </ul>
+<p><strong>Serena Signorelli</strong><br />
+<em><a href="https://twitter.com/sere_signorelli">Twitter</a></em></p>
+<ul>
+<li><a href="https://github.com/avirgillito/unece-sandbox2015-wikistat/tree/master/reports/tourism" class="uri">https://github.com/avirgillito/unece-sandbox2015-wikistat/tree/master/reports/tourism</a></li>
+</ul>
+<p><strong>Jason Baik</strong><br />
+<em><a href="https://twitter.com/jsonbaik">Twitter</a></em></p>
+<ul>
+<li><a href="https://github.com/jasonbaik94/mooc_visualization_analytics" class="uri">https://github.com/jasonbaik94/mooc_visualization_analytics</a></li>
+</ul>
+<p><strong>Martin Henze)</strong><br />
+<em><a href="https://twitter.com/heads0rtai1s">Twitter</a></em></p>
+<ul>
+<li><a href="https://www.kaggle.com/headsortails/kernels" class="uri">https://www.kaggle.com/headsortails/kernels</a></li>
+</ul>
+<p><strong>Ogundepo Ezekiel Adebayo</strong><br />
+<em><a href="https://twitter.com/gbganalyst">Twitter</a></em></p>
+<ul>
+<li><a href="https://github.com/gbganalyst" class="uri">https://github.com/gbganalyst</a></li>
+</ul>
 
 
 
